--- a/2. API/Problem/Stage 1/Step 1 & 2/Cargo.toml
+++ b/2. API/Problem/Stage 1/Step 1 & 2/Cargo.toml
@@ -9,3 +9,12 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 rocket = { version="0.5.0-rc.2", features=["json"] }
+chrono = {version = "0.4.33"}
+
+[dependencies.uuid]
+version = "1.7.0"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]
